--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+### ============== java stuff =================
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -15,3 +16,44 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+
+### ============== typescript stuff =================
+
+# dependencies
+node_modules
+.pnp
+.pnp.js
+# testing
+coverage
+
+# production
+build
+dist
+combined.log
+error.log
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.eslintrc.js
+.env
+*.env
+tsconfig.tsbuildinfo
+.eslintcache
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Expo
+.expo/
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
