--- a/anual/pom.xml
+++ b/anual/pom.xml
@@ -42,5 +42,11 @@
       <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.rabbitmq</groupId>
+      <artifactId>amqp-client</artifactId>
+      <version>5.21.0</version>
+    </dependency>
   </dependencies>
 </project>
