fix rabbitt connection

--- a/anual/docker-compose.yml
+++ b/anual/docker-compose.yml
@@ -24,6 +24,9 @@ services:
     rabbit-mq:
         image: bitnami/rabbitmq:latest
         restart: always
+        environment:
+            - RABBITMQ_USERNAME=fridgebridge
+            - RABBITMQ_PASSWORD=fridgebridge
         ports:
             - 15672:15672
             - 5672:5672
