feat: server initialization

--- a/anual/pom.xml
+++ b/anual/pom.xml
@@ -11,6 +11,12 @@
   <dependencies>
 
     <dependency>
+      <groupId>io.javalin</groupId>
+      <artifactId>javalin</artifactId>
+      <version>6.3.0</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.sendgrid</groupId>
       <artifactId>sendgrid-java</artifactId>
       <version>4.10.2</version>
