--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 ### ============== java stuff =================
-target/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -11,8 +10,6 @@ buildNumber.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 
-# Eclipse m2e generated files
-# Eclipse Core
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
@@ -29,31 +26,12 @@ coverage
 # production
 build
 dist
-combined.log
-error.log
+target/
+*.log
 
 # misc
-.DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.eslintrc.js
 .env
-*.env
-tsconfig.tsbuildinfo
-.eslintcache
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Expo
-.expo/
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-*.orig.*
-web-build/
