--- a/anual/pom.xml
+++ b/anual/pom.xml
@@ -9,6 +9,22 @@
   <name>anual</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+    <!-- Hibernate -->
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>6.6.1.Final</version>
+    </dependency>
+    <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>42.6.0</version> 
+    </dependency>
+    <dependency>
+        <groupId>javax.persistence</groupId>
+        <artifactId>javax.persistence-api</artifactId>
+        <version>2.2</version>
+    </dependency>
     <!-- Loggging -->
     <dependency>
         <groupId>org.slf4j</groupId>
