chore: better debugging for hibernate logsd

--- a/anual/src/main/resources/log4j.properties
+++ b/anual/src/main/resources/log4j.properties
@@ -22,3 +22,7 @@ rootLogger.appenderRef.1.ref = MAIN
 logger.0.name = org.example
 logger.0.level = DEBUG
 logger.0.appenderRef.0.ref = DEBUG_LOG
+
+log4j.logger.org.hibernate=DEBUG, stdout
+log4j.logger.org.hibernate.SQL=DEBUG
+log4j.logger.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
