--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+anual/scripts/test-files
 
 ### ============== typescript stuff =================
 
