chore: makefile open-api to markdown targets with widdershins

--- a/anual/Makefile
+++ b/anual/Makefile
@@ -48,3 +48,15 @@ docs-serve: ## Serves static build documentation site
 	@cd docs/site && npm run serve
 
 docs-deploy: docs-build docs-serve ## Builds docs and serves documentation 
+
+docs-open-api-to-markdown: ## Create a mardkown specification from open-api yaml, you need to provide FILE_PATH and OUT_PATH 
+	widdershins $(FILE_PATH) -u docs/openapi3 --language_tabs='shell:Shell' 'javascript:Javascript' -o $(OUT_PATH) 
+
+WIDDERSHINS_PATH?=$(HOME)/widdershins-docusaurus
+docs-install-widdershins: ## Installs widdernshins used to generate .md files from open-api .yml specification
+	git clone https://github.com/MarcosNicolau/widdershins-docusaurus.git $(WIDDERSHINS_PATH)
+	cd $(HOME)/widdershins-docusaurus && npm install && npm install --global .
+
+docs-remove-widdershins: ## Removes widdernshins from the system
+	npm remove --global widdershins
+	rm -rf $(WIDDERSHINS_PATH)
