--- a/anual/infra/conf/.env.javaserver
+++ b/anual/infra/conf/.env.javaserver
@@ -1,6 +1,6 @@
 POSTGRES_URL={{postgres_url}}
-POSTGRES_USER={{db_user}}
-POSTGRES_PASSWORD={{db_password}}
+POSTGRES_USER={{postgres_user}}
+POSTGRES_PASSWORD={{postgres_password}}
 RABBIT_HOST=localhost
 RABBIT_PORT=5672
 RABBIT_USER={{rabbitmq_user}}
