--- a/anual/infra/ansible/java.yaml
+++ b/anual/infra/ansible/java.yaml
@@ -5,55 +5,37 @@
 
   tasks:
     # Open-jdk installation
-    - name: Check if java exists
-      command: . ~/.profile && java --version
-      register: java_exists
-      ignore_errors: true
-
     - name: Download openjdk tar file
-      when: java_exists is failed
       command: wget https://download.java.net/java/GA/jdk23.0.1/c28985cbf10d4e648e4004050f8781aa/11/GPL/openjdk-23.0.1_linux-x64_bin.tar.gz
 
-    - name: Extract and java
-      when: java_exists is failed
-      command: tar -C /home/{{ user }}/bin/java xvf openjdk-23*_bin.tar.gz
-      become: true
+    - name: Extract java
+      command: tar -xvf openjdk-23.0.1_linux-x64_bin.tar.gz -C /home/{{ user }}/bin/ && mv /home/{{ user }}/bin/openjdk-23.0.1_linux-x64  /home/{{ user }}/bin/jdk
 
     - name: Delete downloaded tar file
-      when: java_exists is failed
       shell: rm -rf openjdk-23*_bin.tar.gz
 
-    - name: Add go binary path to ~/.profile
+    - name: Add java binary path to ~/.profile
       when: java_exists is failed
       lineinfile:
-        path: ~/.profile
-        line: "export PATH=$PATH:/home/{{ user }}}/bin/java/bin/"
+        path: /home/{{ user }}}/.profile
+        line: "export PATH=$PATH:/home/{{ user }}/bin/jdk/bin/"
         create: true
         state: present
 
     # Mvn installation
-    - name: Check if mvn exists
-      shell: . ~/.profile && mvn --version
-      register: mvn_exists
-      ignore_errors: true
-
     - name: Download mvn tar file
-      when: mvn_exists is failed
       command: wget https://dlcdn.apache.org/maven/maven-3/3.9.9/binaries/apache-maven-3.9.9-bin.tar.gz
 
     - name: Extract mvn
-      when: mvn_exists is failed
-      command: tar -C /home/{{ user }}/bin/mvn apache-maven-*-bin.tar.gz
+      command: tar -xvf apache-maven-3.9.9-bin.tar.gz -C /home/{{ user }}/bin/ && mv /home/{{ user }}/bin/apache-maven-3.9.9  /home/{{ user }}/bin/mvn
       become: true
 
     - name: Delete downloaded tar file
-      when: mvn_exists is failed
       shell: rm -rf apache-maven-*-bin.tar.gz
 
-    - name: Add go binary path to ~/.profile
-      when: mvn_exists is failed
+    - name: Add mvn binary path to ~/.profile
       lineinfile:
-        path: ~/.profile
-        line: "export PATH=$PATH:/home/{{ user }}}/bin/mvn/bin/"
+        path: /home/{{user}}}/.profile
+        line: "export PATH=$PATH:/home/{{ user }}/bin/mvn/bin"
         create: true
         state: present
