--- a/anual/infra/ansible/server.yaml
+++ b/anual/infra/ansible/server.yaml
@@ -1,7 +1,7 @@
-- import-playbook: setup.yaml
-- import-playbook: webserver.yaml
-- import-playbook: postgres.yaml
-- import-playbook: rabbit.yaml
-- import-playbook: java.yaml
-- import-playbook: node.yaml
-- import-playbook: services.yaml
+# - import_playbook: setup.yaml
+# - import_playbook: webserver.yaml
+# - import_playbook: postgres.yaml
+# - import_playbook: rabbit.yaml
+- import_playbook: java.yaml
+- import_playbook: node.yaml
+- import_playbook: services.yaml
