--- a/anual/infra/ansible/setup.yaml
+++ b/anual/infra/ansible/setup.yaml
@@ -1,4 +1,5 @@
-- hosts: all
+- name: Setup server
+  hosts: all
   become: true
   vars:
     user: "{{ user }}"
@@ -6,8 +7,8 @@
   tasks:
     - name: Install basic tools
       apt: name={{ item }} state=latest update_cache=true
-      loop: [git, openssl, wget, ufw, unzip, curl, vim, tmux]
-      state: latest
+      loop:
+        [gnupg, openssl, git, make, openssl, wget, ufw, unzip, curl, vim, tmux]
 
     - name: Create basic directories if do not exist
       ansible.builtin.file:
@@ -17,7 +18,7 @@
       become_user: "{{ user }}"
       loop:
         - repos
-        - config
+        - conf
         - services
         - bin
 
