--- a/anual/infra/services/docs.service
+++ b/anual/infra/services/docs.service
@@ -5,7 +5,8 @@ After=network.target
 [Service]
 Type=simple
 User={{ user }}
-WorkingDirectory=/home/{{ user }}/repos/fridgebridge/anual/
+EnvironmentFile=/home/{{ user }}/services/docs.service.env
+WorkingDirectory=/home/{{ user }}/repos/fridge-bridge/anual/
 ExecStart=make docs-deploy
 Restart=always
 RestartSec=1
