--- a/anual/infra/conf/nginx.conf
+++ b/anual/infra/conf/nginx.conf
@@ -15,10 +15,9 @@ http {
         listen 443 ssl;
         server_name {{ domain_name }};
 
-        ssl on;
         ssl_certificate         /etc/letsencrypt/live/{{ domain_name }}/fullchain.pem;
         ssl_certificate_key     /etc/letsencrypt/live/{{ domain_name }}/privkey.pem;
-        ssl_trusted_certificate /etc/letsencrypt/live/{{ domain_name }}/fullchain.pem;
+        ssl_trusted_certificate /etc/letsencrypt/live/{{ domain_name }}/chain.pem;
         ssl_dhparam /etc/nginx/dhparams.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
