--- a/anual/infra/ansible/postgres.yaml
+++ b/anual/infra/ansible/postgres.yaml
@@ -1,71 +1,53 @@
 - name: Install and setup postgres
   hosts: all
-  become: yes
   vars:
-    db_name: "{{ db_name }}"
-    db_user: "{{ db_user }}"
-    db_password: "{{ db_password }}"
-
-  pre_tasks:
-    - name: "Install packages"
-      apt: "name={{ item }} state=present"
-      with_items:
-        - postgresql
-        - postgresql-server
-
-    - name: "Install Python packages"
-      pip: "name={{ item }}  state=present"
-      with_items:
-        - psycopg2-binary
+    postgres_db: "{{ postgres_db }}"
+    postgres_user: "{{ postgres_user }}"
+    postgres_password: "{{ postgres_password }}"
 
   tasks:
-    - name: "Find out if PostgreSQL is initialized"
-      ansible.builtin.stat:
-        path: "/var/lib/pgsql/data/pg_hba.conf"
-      register: postgres_data
+    - name: Install postgres
+      apt: name={{ item }} state=latest update_cache=true
+      loop: [python3-psycopg2, postgresql]
+      become: true
+
+    - name: Start db server
+      ansible.builtin.systemd_service:
+        name: postgresql
+        state: started
+        enabled: true
+      become: true
 
     - name: "Initialize PostgreSQL"
       shell: "postgresql-setup initdb"
       when: not postgres_data.stat.exists
 
-    - name: "Start and enable services"
-      service: "name={{ item }} state=started enabled=yes"
-      with_items:
-        - postgresql
-
-    - name: "Create app database"
+    - name: Create application database
       postgresql_db:
-        state: present
-        name: "{{ db_name }}"
+        name: "{{ postgres_db }}"
       become: yes
+      become_user: postgres
 
-    - name: "Create db user"
+    - name: Create database user
       postgresql_user:
-        state: present
-        name: "{{ db_user }}"
-        password: "{{ db_password }}"
-      become: yes
+        name: "{{ postgres_user }}"
+        password: "{{ postgres_password }}"
+      become: true
+      become_user: postgres
 
-    - name: "Grant db user access to app db"
+    - name: Grant privileges on database
       postgresql_privs:
         type: database
-        database: "{{ db_name }}"
-        roles: "{{ db_user }}"
+        database: "{{ postgres_db }}"
+        roles: "{{ postgres_user }}"
         grant_option: no
         privs: all
-      become: yes
+      become: true
+      become_user: postgres
 
-    - name: "Allow md5 connection for the db user"
-      postgresql_pg_hba:
-        dest: "~/data/pg_hba.conf"
-        contype: host
-        databases: all
-        method: md5
-        users: "{{ db_user }}"
-        create: true
-      become: yes
-      notify: restart postgres
-
-  handlers:
-    - name: restart postgres
-      service: name=postgresql state=restarted
+    - name: Restart db server
+      ansible.builtin.systemd_service:
+        name: postgres
+        state: restarted
+        enabled: true
+      become: true
