--- a/anual/infra/ansible/setup.yaml
+++ b/anual/infra/ansible/setup.yaml
@@ -39,5 +39,5 @@
       ansible.builtin.git:
         repo: https://github.com/Lisandrogq/DDS-Grupo11.git
         dest: /home/{{ user }}/repos/fridge-bridge
-        version: deploy-infra
+        version: main
       become_user: "{{ user }}"
