--- a/anual/pom.xml
+++ b/anual/pom.xml
@@ -25,6 +25,24 @@
         <artifactId>javax.persistence-api</artifactId>
         <version>2.2</version>
     </dependency>
+
+    <!-- Prometheus -->
+    <dependency>
+        <groupId>io.prometheus</groupId>
+        <artifactId>prometheus-metrics-core</artifactId>
+        <version>1.0.0</version>
+    </dependency>
+    <dependency>
+        <groupId>io.prometheus</groupId>
+        <artifactId>prometheus-metrics-instrumentation-jvm</artifactId>
+        <version>1.0.0</version>
+    </dependency>
+    <dependency>
+        <groupId>io.prometheus</groupId>
+        <artifactId>prometheus-metrics-exporter-httpserver</artifactId>
+        <version>1.0.0</version>
+    </dependency>
+
     <!-- Loggging -->
     <dependency>
         <groupId>org.slf4j</groupId>
