fix: grafana deploy

--- a/anual/infra/services/grafana.service
+++ b/anual/infra/services/grafana.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 User={{ user }}
 WorkingDirectory=/home/{{ user }}/bin/grafana/ 
-ExecStart=/home/{{ user }}/bin/grafana/bin/grafana server --config-file /home/{{ user }}/conf/grafana/grafana.ini
+ExecStart=/home/{{ user }}/bin/grafana/bin/grafana server --config /home/{{ user }}/conf/grafana/grafana.ini
 Restart=always
 RestartSec=1
 StartLimitBurst=100
