--- a/anual/infra/ansible/grafana.yaml
+++ b/anual/infra/ansible/grafana.yaml
@@ -4,17 +4,17 @@
     user: "{{ user }}"
 
   tasks:
-    # - name: Download grafana tar file
-    #   command: wget https://dl.grafana.com/oss/release/grafana-11.3.0.linux-amd64.tar.gz
+    - name: Download grafana tar file
+      command: wget https://dl.grafana.com/oss/release/grafana-11.3.0.linux-amd64.tar.gz
 
-    # - name: Extract grafana
-    #   command: tar -zxvf  grafana-11.3.0.linux-amd64.tar.gz -C /home/{{ user }}/bin/
+    - name: Extract grafana
+      command: tar -zxvf  grafana-11.3.0.linux-amd64.tar.gz -C /home/{{ user }}/bin/
 
-    # - name: Rename grafana folder
-    #   command: mv /home/{{ user }}/bin/grafana-v11.3.0  /home/{{ user }}/bin/grafana
+    - name: Rename grafana folder
+      command: mv /home/{{ user }}/bin/grafana-v11.3.0  /home/{{ user }}/bin/grafana
 
-    # - name: Delete downloaded tar file
-    #   shell: rm -rf grafana-11.3.0.linux-amd6
+    - name: Delete downloaded tar file
+      shell: rm -rf grafana-11.3.0.linux-amd6
 
     - name: Ensure Grafana conf directory exists
       ansible.builtin.file:
@@ -33,20 +33,20 @@
 
     - name: Ensure Grafana /etc/grafana directories exists
       ansible.builtin.file:
-        path: /etc/
+        path: /etc/{{ item }}
         state: directory
       become: true
       loop:
         - grafana
         - grafana/provisioning
         - grafana/provisioning/datasources
-        - grafana/dashboards
-        - grafana/dashboards/fridgebridge
+        - grafana/provisioning/dashboards
+        - grafana/provisioning/dashboards/fridgebridge
 
     - name: Create symlinks in /etc/grafana/provisioning/datasource/datasource.yaml
       ansible.builtin.file:
         src: /home/{{ user }}/conf/grafana/provisioning/datasources/datasource.yaml
-        dest: /etc/grafana/provisioning/datasources
+        dest: /etc/grafana/provisioning/datasources/datasource.yaml
         state: link
         force: yes
       become: true
@@ -54,7 +54,7 @@
     - name: Create symlinks in /etc/grafana/provisioning/dashboards/dashboard_provider.yaml
       ansible.builtin.file:
         src: /home/{{ user }}/conf/grafana/provisioning/dashboards/dashboard_provider.yaml
-        dest: /etc/grafana/provisioning/dashboards/
+        dest: /etc/grafana/provisioning/dashboards/dashboard_provider.yaml
         state: link
         force: yes
       become: true
