--- a/anual/infra/conf/grafana.ini
+++ b/anual/infra/conf/grafana.ini
@@ -48,10 +48,10 @@ domain = localhost
 enforce_domain = false
 
 # The full public facing url
-root_url = %(protocol)s://%(domain)s:%(http_port)s/
+root_url = %(protocol)s://%(domain)s:%(http_port)s/metrics/
 
 # Serve Grafana from subpath specified in `root_url` setting. By default it is set to `false` for compatibility reasons.
-serve_from_sub_path = false
+serve_from_sub_path = true
 
 # Log web requests
 router_logging = false
