--- a/anual/pom.xml
+++ b/anual/pom.xml
@@ -80,6 +80,12 @@
       <artifactId>javalin-rendering</artifactId>
       <version>6.3.0</version>
     </dependency>
+    
+    <dependency>
+      <groupId>com.auth0</groupId>
+      <artifactId>java-jwt</artifactId>
+      <version>4.4.0</version>
+    </dependency>
 
     <!-- html template engine -->
     <dependency>
