--- a/anual/pom.xml
+++ b/anual/pom.xml
@@ -132,5 +132,12 @@
       <artifactId>amqp-client</artifactId>
       <version>5.21.0</version>
     </dependency>
+
+    <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.18.0</version>
+    </dependency>
   </dependencies>
+
 </project>
