--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ buildNumber.properties
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 anual/scripts/test-files
+src/main/resources/public/rewardImages
 
 ### ============== typescript stuff =================
 
