fix: sendgrid mails

--- a/anual/src/main/resources/.env.dev
+++ b/anual/src/main/resources/.env.dev
@@ -6,3 +6,5 @@ RABBIT_PORT=5672
 RABBIT_USER=fridgebridge
 RABBIT_PASSWORD=fridgebridge
 JWT_SECRET=fridgebridge
+SENDGRID_API_KEY=<GET_YOUR_OWN_KEY>
+COMPANY_MAIL=<SENDGRID_SENDER_MAIL>
