infra: update deploy with new .env files for jwt

--- a/anual/infra/conf/.env.java_server
+++ b/anual/infra/conf/.env.java_server
@@ -5,3 +5,7 @@ RABBIT_HOST=localhost
 RABBIT_PORT=5672
 RABBIT_USER={{rabbitmq_user}}
 RABBIT_PASSWORD={{rabbitmq_password}}
+JWT_PRIV_KEY={{jwt_priv_key}}
+JWT_PUB_KEY={{jwt_pub_key}}
+SENDGRID_API_KEY={{sendgrid_api_key}}
+COMPANY_MAIL={{company_mail}}
