chore: target to clean docker volumes

--- a/anual/Makefile
+++ b/anual/Makefile
@@ -19,8 +19,12 @@ docker-up: ## Starts docker containers
 docker-down: ## Stops and removes docker containers
 	docker-compose down
 
-docker-clean: docker-down ## Remove containers, images and volumes related to fridgebridge
+docker-rm-volumes: ## Removes all docker volumes related to fridbridge 
 	docker volume rm fridge-bridge_postgres_data
+
+docker_clean: docker-down docker-rm-volumes ## Removes containers and volumes related to fridgebridge
+
+docker-clean_all: docker-down docker-rm-volumes ## Remove containers, images and volumes related to fridgebridge
 	docker rmi postgres rabbitmq adminer
 	
 start-server: ## Start the java server
