--- a/anual/pom.xml
+++ b/anual/pom.xml
@@ -138,6 +138,13 @@
         <artifactId>commons-io</artifactId>
         <version>2.18.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client</artifactId>
+      <version>2.4.0</version>
+    </dependency>
+    
   </dependencies>
 
 </project>
