--- a/anual/infra/ansible/postgres.yaml
+++ b/anual/infra/ansible/postgres.yaml
@@ -41,6 +41,16 @@
         privs: ALL
       become: true
       become_user: postgres
+    
+    - name: Grant privileges on PUBLIC schema
+      community.postgresql.postgresql_privs:
+        db: "{{ postgres_db }}"
+        privs: ALL
+        type: schema
+        objs: public
+        role: "{{ postgres_user }}"
+      become: true
+      become_user: postgres
 
     - name: Restart db server
       ansible.builtin.systemd_service:
