feat: node_exporter for server

--- a/anual/infra/conf/prometheus.yaml
+++ b/anual/infra/conf/prometheus.yaml
@@ -4,8 +4,15 @@ global:
 # A scrape configuration containing exactly one endpoint to scrape.
 scrape_configs:
   - job_name: "fridge-bridge"
-    scrape_interval: 1s
+    scrape_interval: 5s
     static_configs:
       - targets: ["localhost:9091"]
         labels:
           bot: "fridge-bridge"
+
+  - job_name: "node_exporter"
+    scrape_interval: 5s
+    static_configs:
+      - targets: ["localhost:9100"]
+        labels:
+          bot: "node_exporter"
