--- a/anual/infra/ansible/server.yaml
+++ b/anual/infra/ansible/server.yaml
@@ -5,5 +5,6 @@
 - import_playbook: java.yaml
 - import_playbook: node.yaml
 - import_playbook: prometheus.yaml
+- import_playbook: node_exporter.yaml
 - import_playbook: grafana.yaml
 - import_playbook: services.yaml
