fix: deploy .env.java_server

--- a/anual/infra/conf/.env.java_server
+++ b/anual/infra/conf/.env.java_server
@@ -1,3 +1,4 @@
+ENVIRONMENT=prod
 POSTGRES_URL={{postgres_url}}
 POSTGRES_USER={{postgres_user}}
 POSTGRES_PASSWORD={{postgres_password}}
@@ -9,3 +10,7 @@ JWT_PRIV_KEY={{jwt_priv_key}}
 JWT_PUB_KEY={{jwt_pub_key}}
 SENDGRID_API_KEY={{sendgrid_api_key}}
 COMPANY_MAIL={{company_mail}}
+GOOGLE_OAUTH_CLIENT_ID={{google_oauth_client_id}}
+GOOGLE_OAUTH_SECRET={{google_oauth_secret}}
+GITHUB_OAUTH_CLIENT_ID={{github_oauth_client_id}}
+GITHUB_OAUTH_SECRET={{github_oauth_secret}}
